1. Fixed the logical error: now i'm using LocalDate instead of LocalDateTime, where it necessary. 2. Added ability to save onTextClickedListener for the SideDatePicker. Now SideDatePicker state survives configuration changes. 3. Added recycler view to the HomeScreenFragment and the adapter for it. 4. Dependencies graph was updated.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">WorkoutDiary</string>
+    <string name="no_trainings">Тренировок нет</string>
 </resources>
