--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">WorkoutDiary</string>
     <string name="no_trainings">Тренировок нет</string>
+    <string name="training_name">Название тренировки</string>
+    <string name="add_training_block">Добавить упражнение</string>
+    <string name="delete_training">Удалить тренировку</string>
+    <string name="today">(сегодня)</string>
 </resources>
