--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="muscle_type">Мышечная группа</string>
     <string name="exercise_name">Упражнение</string>
     <string name="training_block_header">Тренировочный блок</string>
+    <string name="sets_count">Число подходов:</string>
 </resources>
