1. Added ability to choose muscles and exercise in add edit training block screen. 2. Problem with empty trainings because of deleting from recent apps screen was solved.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="exercise_name">Упражнение</string>
     <string name="training_block_header">Тренировочный блок</string>
     <string name="sets_count">Число подходов:</string>
+    <string name="save_text">Сохранить</string>
+    <string name="reps">Повторения</string>
+    <string name="weight">Вес</string>
 </resources>
