1. Calendar Screen development is finished.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="muscle_name">Название мышечной группы</string>
     <string name="add_muscle">Добавить мышечную группу</string>
     <string name="add_muscle_group">Добавление мышечной группы</string>
+    <string name="no_training">Нет тренировки</string>
 </resources>
