--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="add_muscle">Добавить мышечную группу</string>
     <string name="add_muscle_group">Добавление мышечной группы</string>
     <string name="no_training">Нет тренировки</string>
+    <string name="statistics">Общая статистика</string>
 </resources>
