--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,5 @@
         \nДанная статистика отображает лучшие результаты выполнения упражнения в каждом из тренировочных дней.
     </string>
     <string name="empty_statistics_parameters_message">Параметры для отображения статистики по упражнению не настроены!\nНажмите на карточку для настройки параметров.</string>
+    <string name="reset_parameters">Сбросить параметры</string>
 </resources>
