--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,7 @@
     </string>
     <string name="empty_statistics_parameters_message">Параметры для отображения статистики по упражнению не настроены!\nНажмите на карточку для настройки параметров.</string>
     <string name="reset_parameters">Сбросить параметры</string>
+    <string name="new_training">Новая тренировка</string>
+    <string name="create_training_from_template">Создать тренировку из шаблона</string>
+    <string name="create_new_training">Создать новую тренировку</string>
 </resources>
