--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,8 @@
     <string name="reps_axis">Повторения</string>
     <string name="edit">Редактировать</string>
     <string name="statistics_settings">Настройки статистики</string>
-    <string name="statistics_settings_hint">Выберите упражнение для вывода лучших результатов его выполнения для каждой из тренировок</string>
+    <string name="statistics_settings_hint">Выберите упражнение для вывода лучших результатов его
+        выполнения для каждой из тренировок</string>
     <string name="statistics_parameter">Показатель статистики:</string>
     <string name="time">Время</string>
     <string name="distance">Дистанция</string>
@@ -34,11 +35,16 @@
         Нажмите на карточку для настройки параметров.
         \nДанная статистика отображает лучшие результаты выполнения упражнения в каждом из тренировочных дней.
     </string>
-    <string name="empty_statistics_parameters_message">Параметры для отображения статистики по упражнению не настроены!\nНажмите на карточку для настройки параметров.</string>
+    <string name="empty_statistics_parameters_message">Параметры для отображения статистики по упражнению
+        не настроены!\nНажмите на карточку для настройки параметров.</string>
     <string name="reset_parameters">Сбросить параметры</string>
     <string name="new_training">Новая тренировка</string>
     <string name="create_training_from_template">Выбрать из избранных</string>
     <string name="create_new_training">Создать новую тренировку</string>
-    <string name="empty_templates_message">У вас пока еще нет избранных тренировок :(\nДля добавление тренировки в избранные перейдите на экран редактирования любой тренировки и нажмите на кнопку-сердечко.</string>
+    <string name="empty_templates_message">У вас пока еще нет избранных тренировок :(\nДля добавление
+        тренировки в избранные перейдите на экран редактирования любой тренировки и нажмите на кнопку-сердечко.</string>
     <string name="favourite_trainings">Избранные тренировки</string>
+    <string name="deleteFavouritesInfoMessage">При удалении тренировки из избранных изменяется только
+        лишь статус всех тренировок с соответствующим названием.
+        Сами тренировки при этом не удаляются.</string>
 </resources>
