Swipe to delete functionality for FavouriteTrainingsFragment is implemented.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,7 +44,7 @@
     <string name="empty_templates_message">У вас пока еще нет избранных тренировок :(\nДля добавление
         тренировки в избранные перейдите на экран редактирования любой тренировки и нажмите на кнопку-сердечко.</string>
     <string name="favourite_trainings">Избранные тренировки</string>
-    <string name="deleteFavouritesInfoMessage">При удалении тренировки из избранных изменяется только
-        лишь статус всех тренировок с соответствующим названием.
-        Сами тренировки при этом не удаляются.</string>
+    <string name="deleteFavouritesInfoMessage">При удалении тренировки из списка избранных изменяется только
+        лишь статус всех тренировок с соответствующим названием.Сами тренировки при этом не удаляются.
+        \nСмахните карточку вправо для удаления.</string>
 </resources>
