--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,4 +51,5 @@
     <string name="seconds">Секунды</string>
     <string name="kilometers">Километры</string>
     <string name="meteres">Метры</string>
+    <string name="settings">Настройки</string>
 </resources>
