--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -83,4 +83,11 @@
     <string name="weight_and_reps">Вес и повторения</string>
     <string name="exercises">Упражнения</string>
     <string name="muscles">Мышцы</string>
+    <string name="choose_an_exercise">Выберите упражнение!</string>
+    <string name="last_training">Последняя тренировка: %1$s</string>
+    <string name="without_name">Без названия</string>
+    <string name="total_trainings">Всего тренировок: %1$s</string>
+    <string name="total_sets">Всего выполнено подходов: %1$s</string>
+    <string name="total_reps">Всего повторений: %1$s</string>
+    <string name="total_weight">Всего поднятно: %1$s кг веса</string>
 </resources>
